--- a/skeleton.tex
+++ b/skeleton.tex
@@ -38,7 +38,7 @@
 
 \date{\today}
 \begin{abstract}
-The abstract characterization of essential features of biological systems is necessary in order to formalize corresponding essential features of evolutionary processes. Such a characterization will support recognition of the pattern associated to the variety of particular ways in which biological systems may be realized. All such realizations, regardless of the degree of diversity exhibited in their structure, may then be related by the fact that they all instantiate a common functional form. Here we propose, in relation to previous work, such a characterization whose primary conceptual aspect is that of {\it functional closure}. In this framework any non-equilibrium system may be viewed as being supported by a material flux from which it extracts energy in the process of its self-organization, but a biological system must also achieve the capacity to generate all necessary transformations to render its periodic structure stable. Only in the latter case will biological systems exhibit the dynamic fluctuations in their structure that we observe in the context of development and replication while maintaining a long-term stability that enables them to persist long enough to be observed on macroscopic timescales thereby supporting the existence of what we observe in the context of evolution.
+The abstract characterization of essential features of biological systems is necessary in order to formalize corresponding essential features of evolutionary processes. Such a characterization supports recognition of patterns associated to the variety of particular ways in which biological systems may be realized. All such realizations, regardless of the degree of diversity exhibited in their structure, may then be related by the fact that they all instantiate a common functional form. Here we propose, in relation to previous work, such a characterization whose primary conceptual aspect is that of {\it functional closure}. In this framework any non-equilibrium system may be viewed as being supported by a material flux from which it extracts energy in the process of its self-organization, but a biological system is additionally considered to be required to achieve the capacity to generate all necessary transformations to render its temporally periodic structure stable. Only in the latter case will biological systems exhibit the dynamic fluctuations in their structure that we observe in the context of development and reproduction while maintaining a long-term stability that enables them to persist long enough to be observed on macroscopic timescales. This scenario abstractly characterizes that which supports the existence of what we can observe of evolutionary history in addition to what we might be possible to observe in future experiments in artificial laboratory evolution.
 \end{abstract}
 
 \maketitle
@@ -47,7 +47,7 @@ The abstract characterization of essential features of biological systems is nec
 
 \section{Introduction}
 
-The current amount of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalogue of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcend levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. 
+The current volume of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalogue of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcend levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. 
 
 Category theory has provided a solid language in which to talk about mathematical systems and has been recently used as such and such. In the beginning, category theory was considered by other mathematicians commonly as abstract nonsense but nowadays the community is starting to see it even in an applied fashion. Nevertheless, what cannot be criticized of this theoretical framework is its convenience as a formal language in order to deal with a collection of abstract systems such as mathematical theories. The fundamental organizational power of category theory resides in giving relevance to relationships over objects, thus obtaining an abstract framework into which unify different mathematical programs.
 
