--- a/skeleton.tex
+++ b/skeleton.tex
@@ -47,11 +47,15 @@ The abstract characterization of essential features of biological systems is nec
 
 \section{Introduction}
 
-The current volume of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalogue of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcend levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. 
+The current volume of biological data surpasses our present capacity to integrate and understand it at least in part because we have not produced a theoretical framework that supports the generation of important hypotheses in light of such data. The naturalist dream that highly values an extensive catalogue of biological diversity has reached molecular resolution and yet, aside from heuristics associated to evolutionary theory, we lack a fundamental theory in which to understand and interpret the relationships living systems exhibit that transcend levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we continue to characterize our biosphere at the molecular level without a promising theoretical framework, we will remain lost in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community in the domain of biology requires more investment in the project of unification of knowledge.
 
-Category theory has provided a solid language in which to talk about mathematical systems and has been recently used as such and such. In the beginning, category theory was considered by other mathematicians commonly as abstract nonsense but nowadays the community is starting to see it even in an applied fashion. Nevertheless, what cannot be criticized of this theoretical framework is its convenience as a formal language in order to deal with a collection of abstract systems such as mathematical theories. The fundamental organizational power of category theory resides in giving relevance to relationships over objects, thus obtaining an abstract framework into which unify different mathematical programs.
+Category theory has provided a useful language in which to talk about and interrelate mathematical theories. In its beginnings, category theory was commonly referred to by mathematicians as {\it abstract nonsense}, but over the past sixty years the community has largely begun to embrace it even in an applied fashion in both physics and computer science. The fundamental organizational power of category theory resides in giving ontological status to processes or relationships over objects.
 
-\section{The definition of living systems}
+The substrate-enzyme-product abstraction from enzyme kinetics has been adopted to model genetic regulation and even intercellular interactions and other population-level processes. It appears that a common feature of models of biological systems, similarly to category theory, promotes placing transformation processes at least on equal footing with particular biomolecules. What is more is that the way in which information about biological systems has come to be described in terms of various types of networks is also amicable to a category theoretic treatment as a category can itself be viewed as a directed graph with some extra structure.
+
+In this light and in this work we reevaluate a historical approach to characterize an important abstract property of biolgoical systems in terms of so-called {\it functional closure}. This feature appears to distinguish biological systems to some extent, but future technological advances, if they have not already, may lead this distinction to break down. Nevertheless, it will still be possible to view existing biological systems as sharing the particular feature and the many detailed aspects of their structure as representing variations on this relatively simple underlying theme.
+
+\section{Attempting to define living systems}
 
 One of the most controversial yet fundamental abstractions that any biological frontier field has to deal with is the selection of the set of properties that characterize uniquely a living system. The majority of the definitions of life focus on the ability to self-sustain, reproduce and evolve autonomously, tying the system to the evolutionary theory. However, not all properties appear simultaneously in all biological systems and \textit{parasitic} organisms can be found for some of the properties described. Furthermore, the lack of other biospheres to compare with, generates a problem regarding the evaluation of our biota historical component. We can classify the properties chosen to define life in two broad groups; evolutionary properties such as reproduction and evolvavility or thermodynamic properties such as autopoiesis and metabolic transformation. The first two are related to the biological level laws while the thermodynamic considerations describe how these higher level properties are sustained by lower level dynamics. The element left intentionally outside of this discussion is the environment in which the living system is defined, or more concretely, the boundary of our so called living system. 
 
@@ -72,7 +76,7 @@ Parasite-evolving \ar[u]^-{Prion*} & Parasite-replicating \ar[l]^-{Protein}\ar[u
 }
 \end{displaymath}
 			  
-\section{A scent of category theory}
+\section{Basic concepts of category theory}
 
 It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult ...
 
@@ -288,7 +292,7 @@ The counit of the adjunction is the evaluation map:
 		$$
 	
 	
-\section{Functional closure}
+\section{Functional closure as an invariant property of biological systems}
 
 In this section, we will make a clear exposition of the categorical modelling relationship of a functionally closed living system. We will review succinctly Rosen's M,R-systems and hopefully go beyond concreting a categorical model of a living system inspired in our biosphere.
 
@@ -462,7 +466,7 @@ Closing the system by:
 			\epsilon = ev_{B^{A^B}} \colon B^{A^{B^B}} \times B \longrightarrow B^{A^B}
 		$$
 	
-\section{Evolutionary perspectives}
+\section{Functional closure as an evolutionary constraint}
 
 \section{Conclusions}
 
