--- a/skeleton.tex
+++ b/skeleton.tex
@@ -38,7 +38,7 @@
 
 \date{\today}
 \begin{abstract}
-The abstract characterization of essential features of biological systems is necessary in order to formalize corresponding essential features of evolutionary processes. Such a characterization supports recognition of patterns associated to the variety of particular ways in which biological systems may be realized. All such realizations, regardless of the degree of diversity exhibited in their structure, may then be related by the fact that they all instantiate a common functional form. Here we propose, in relation to previous work, such a characterization whose primary conceptual aspect is that of {\it functional closure}. In this framework any non-equilibrium system may be viewed as being supported by a material flux from which it extracts energy in the process of its self-organization, but a biological system is additionally considered to be required to achieve the capacity to generate all necessary transformations to render its temporally periodic structure stable. Only in the latter case will biological systems exhibit the dynamic fluctuations in their structure that we observe in the context of development and reproduction while maintaining a long-term stability that enables them to persist long enough to be observed on macroscopic timescales. This scenario abstractly characterizes that which supports the existence of what we can observe of evolutionary history in addition to what we might be possible to observe in future experiments in artificial laboratory evolution.
+The abstract characterization of essential properties of biological systems is necessary in order to formalize corresponding essential features of evolutionary processes. Such a characterization supports recognition of patterns associated to the variety of particular ways in which biological systems may be realized. All such realizations, regardless of the degree of diversity exhibited in their structure, may then be related by the fact that they all instantiate a common functional form. Here we propose, in relation to previous work, such a characterization whose primary conceptual aspect is that of {\it functional closure}. In this framework any non-equilibrium system may be viewed as being supported by a material flux from which it extracts energy in the process of its self-organization, but a biological system is additionally considered to be required to achieve the capacity to generate all necessary transformations to render its temporally periodic structure stable. Only in the latter case will biological systems exhibit the dynamic fluctuations in their structure that we observe in the context of development and reproduction while maintaining a long-term stability that enables them to persist long enough to be observed on macroscopic time-scales. This scenario abstractly characterizes that which supports the existence of what we can observe of evolutionary history in addition to what we might be possible to observe in future experiments in artificial laboratory evolution.
 \end{abstract}
 
 \maketitle
