--- a/skeleton.tex
+++ b/skeleton.tex
@@ -76,7 +76,7 @@ Parasite-evolving \ar[u]^-{Prion*} & Parasite-replicating \ar[l]^-{Protein}\ar[u
 }
 \end{displaymath}
 			  
-\section{Basic concepts of category theory}
+\section{Relevant concepts from category theory}
 
 It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult ...
 
