update figure and first section

--- a/plos_template.tex
+++ b/plos_template.tex
@@ -107,13 +107,13 @@ $\ast$ E-mail: Corresponding author@institute.edu
 \section*{Introduction}
 Evolution is arguably the most fundamental organizing concept in biology. In order to understand biological systems, it will be necessary to address the question: What are the necessary enabling conditions that make biological evolution possible? The synthesis of some potential answers to this question may clarify a path toward defining a sufficient collection of preconditions for evolutionary processes to take flight.
 
-Here we argue that one such necessary precondition for evolution is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and softwrae in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means.
+Here we argue that one such necessary precondition for evolution is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means.
 
 In this light, we can refine the question, "Is there a formal language capable of expressing this property?" by adjoining the follow-up question, "If so, what is the language of minimal expressive power capable of expressing the functional closure property?" We begin to address the first question taking an historically motivated approach by attempting to interpret this diagram in terms of an abstract algebraic language called category theory. Unfortunately, the prototypical diagram violates a fundamental assumption of this language precisely because the diagram expresses the functional closure property. However, we find that this diagram, and indeed the functional closure property in general, can be interpreted in terms of a standard model of computation called (untyped or type-free) lambda calculus. We find that the interpretation of functional closure in terms of category theory can be recovered, albeit it in a form that looks quite different, via one typical category theoretic semantics for the untyped lambda calculus.
 
 Although the untyped lambda calculus and its associated category theoretic semantics are capable of expressing the functional closure property, this method has at least two problems. One is that the untyped lambda calculus is a relatively expressive language capable of implementing general recursion. The second is that the untyped lambda calculus is capable of expressing functional closure in a trivial way via something as simple as an identity function. A simple solution might seem to pass to the simply typed lambda calculus, of which the untyped lambda calculus has been argued to be a special case. However, as a result of the analogous category theoretic semantics for the simply typed lambda calculus, doing so brings us back to the original category theoretic interpretation of the diagram expressing the functional closure property that we demonstrated to be in type-theoretic error.
 
-This circularity seems to suggest that in order to address the minimality question it may be necessary to take into account expressions of functional closure that may be possible to construct in various extensions of the simply typed lambda calculus (some of these may be found on the seven additional vertices of Barendregt's lambda cube). We discuss these issues with respect to the goal of identifying a language of minimal expressive power capable of representing the functional closure property or relevant approximations thereof.
+This circularity seems to suggest that in order to address the second question regarding minimal expressive power necessary to express functional closure it may be necessary to take into account expressions of functional closure that may be possible to construct in various extensions of the simply typed lambda calculus (some of these may be found on the seven additional vertices of Barendregt's lambda cube). We discuss these issues with respect to the goal of identifying a language of minimal expressive power capable of representing the functional closure property or relevant approximations thereof.
 
 % Results and Discussion can be combined.
 \section*{Functional closure in biological terms}
